# oxidf

./: Cargo.toml  README.md
src/: compute.rs  input.rs  main.rs  merge.rs  operations.rs  output.rs  parser.rs  steps.rs  utils.rs
tests/: test_failure_toml.rs
tests/data/: iris_missing.csv  iris_unique.csv  pivot_example.csv
tests/toml/: iris.toml  iris_anonymize.toml  iris_contains.toml  iris_eq_str.toml  iris_remove_na.toml  missing_steps.toml  plot.gnuplot
tests/toml/failure/: false_operation.toml  missing_steps_operation.toml  missing_steps_properties.toml  wrong_general.toml  wrong_general2.toml
tests/toml/success/: cars.toml  iris_cast_float_to_int_to_float.toml  iris_eq_number.toml  iris_gt.toml  iris_gt_eq.toml  iris_isin_number.toml  iris_isin_str.toml  iris_lt.toml  iris_lt_eq.toml  iris_recode_number.toml  iris_recode_str.toml  iris_rename.toml  iris_select.toml  iris_unique_all.toml  iris_unique_cols.toml  pivot_example.toml  titanic.toml  titanic_recode_and_cast_int_tostr.toml  titanic_recode_str_to_int.toml
