[package]
name = "oxidf"
version = "0.1.0"
edition = "2021"
authors = ["David Issa Mattos <issamattos.david@gmail.com>"]
description = "oxidf process csv files according a set of operations specified in a toml file. See the README.md for more details."
repository = "https://github.com/davidissamattos/oxidf/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version="^0.25.1", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "rank", "lazy_regex", "is_in", "rows", "pivot"]}
polars-ops = "^0.25.1"
toml = "^0.5.9"
serde = "^1.0.1"
serde_derive = "^1.0.1"
sha2 = "^0.10.6"
rand = {version = "^0.8.5"}
clap = { version = "4.0.32", features = ["derive"] }
